# CosmicUpdate

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
data/: com.github.davidboulay.CosmicAppletUpdates.desktop
examples/: check.rs
src/: backend.rs  lib.rs  main.rs  updater.rs  window.rs
